<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Cycle extends Model
{

    protected $fillable = [
        'shuffledList',
        'index',
        'count'
    ];

    use HasFactory;
}
