<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Langue extends Model
{
    use HasFactory;

    protected $fillable = [
        'name'
    ];

    public function villes()
    {
        return $this->belongsToMany(Ville::class);
    }
}
